--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
  
 <head>
-   <title> Ilya is the best</title>
+   <title> 123</title>
 </header>
 
 <body>
-      <h2>Heading Content</h2>
-      <p>Paragraph Content</p>
+      <h2>Ilya is the best</h2>
+      <p><color>and that's a fact</color></p>
+</body>
+
+</html>
+
+<html>
+      <head>
+            <tilte>
+                  <meta charset="utf-8">
+                  <color style="color:rgb(255, 0, 0);">КНОПОЧКА ПРАВЕЕ!</color>
+            </tilte>
+      </head>
+
+<body>
+      <button>Кнопка</button>
 </body>
 
 </html>
