--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
+<!DOCTYPE html>
 <html>
- 
-<head>
-   <title> 123</title>
-</header>
 
-<body>
-      <h2>Ilya is the best</h2>
-      <p><color>and that's a fact</color></p>
-</body>
-
-</html>
-
-<html>
       <head>
-            <tilte>
-                  <meta charset="utf-8">
-                  <color style="color:rgb(255, 0, 0);">КНОПОЧКА ПРАВЕЕ!</color>
-            </tilte>
+            <meta charset="utf-8">
+            <title>Марчик27</title>
       </head>
 
-<body>
-      <button>Кнопка</button>
-</body>
+      <body>
+            Privet!
+      </body>
 
 </html>
