--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 
       <head>
             <meta charset="utf-8">
+            <meta name="author" content="Mark" />
+            <meta name="descriptoin" content="Small descriptoin" />
+            <meta name="keywords" content="game, play, gameplay" />
+
             <title>Марчик27</title>
       </head>
 
       <body>
+            <!--Comment-->
             Privet!
       </body>
 
-</html>
+</html> 
