--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html>
 
       <head>
-            <meta charset="utf-8">
-            <meta name="author" content="Mark" />
-            <meta name="descriptoin" content="Small descriptoin" />
-            <meta name="keywords" content="game, play, gameplay" />
-
             <title>Марчик27</title>
       </head>
 
       <body>
-            <!--Comment-->
-            Privet!
+            <h1>Заголовок1</h1>
+            <h2>Заголовок2</h2>
+            <h3>Заголовок3</h3>
+            <h4>Заголовок4</h4>
+            <h5>Заголовок5</h5>
+            <h6>Заголовок6</h6>
+
+            <p>Загловок?<b>1</b></p>
+            <p>Загловок?<strong>2</strong></p>
+            
+            <p><u>Example <b><i>Test</i></b> <s>text</s></u></p>
+            H<sub>2</sub>O<br><br>
+            a<sup>2</sup>
+            <hr>
+
+            <abbr title="Example">HTML</abbr>
+            <address>KYIV, UA</address>
+
+      <pre>function test() {
+            console.log("some");
+}</pre>
+      <code>Let code = "s";</code>
       </body>
 
 </html> 
