--- a/index.html
+++ b/index.html
@@ -2,32 +2,30 @@
 <html>
 
       <head>
+            <meta charset="utf-8" />
             <title>Марчик27</title>
       </head>
-
       <body>
-            <h1>Заголовок1</h1>
-            <h2>Заголовок2</h2>
-            <h3>Заголовок3</h3>
-            <h4>Заголовок4</h4>
-            <h5>Заголовок5</h5>
-            <h6>Заголовок6</h6>
+            <ol start="5" type="I">
+                  <li><b>Купить игру</b></li>
+                  <li><em>Buy tomatos</em></li>
+                  <li><b>buy bus</b></li>
+            </ol>
 
-            <p>Загловок?<b>1</b></p>
-            <p>Загловок?<strong>2</strong></p>
+      <ul type="square">
+                  <li>Buy Game</li>
+                  <li>Buy Tomatos</li>
+                  <li>Buy Bus</li>
+
+                  <li>            <ol start="1" type="1">
+                        <li><b>Купить игру</b></li>
+                        <li><em>Buy tomatos</em></li>
+                        <li><b>buy bus</b></li>
+                  </ol>
+            </li>
+      </ul>
+
             
-            <p><u>Example <b><i>Test</i></b> <s>text</s></u></p>
-            H<sub>2</sub>O<br><br>
-            a<sup>2</sup>
-            <hr>
-
-            <abbr title="Example">HTML</abbr>
-            <address>KYIV, UA</address>
-
-      <pre>function test() {
-            console.log("some");
-}</pre>
-      <code>Let code = "s";</code>
       </body>
 
 </html> 
