--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ua">
 
       <head>
             <meta charset="utf-8" />
             <title>Марчик27</title>
       </head>
       <body>
-            <ol start="5" type="I">
-                  <li><b>Купить игру</b></li>
-                  <li><em>Buy tomatos</em></li>
-                  <li><b>buy bus</b></li>
-            </ol>
-
-      <ul type="square">
-                  <li>Buy Game</li>
-                  <li>Buy Tomatos</li>
-                  <li>Buy Bus</li>
-
-                  <li>            <ol start="1" type="1">
-                        <li><b>Купить игру</b></li>
-                        <li><em>Buy tomatos</em></li>
-                        <li><b>buy bus</b></li>
-                  </ol>
-            </li>
-      </ul>
-
-            
+            <p title="Example text">Example</p>
       </body>
 
 </html> 
