--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
             <title>Марчик27</title>
       </head>
       <body>
-            <p title="Example text">Example</p>
+            <a href="#bottom">Вниз</a><br><br>
+      
+            <a href="https://justtwic.art/" 
+            title="Go justtwic.art" target="_blank">Go to justtwic.art</a>
+            <br><br><br><a href="about.html" target="_blank">СТРАНИЦА О НАС</a>
+            <a><b> | </b></a>
+            <a href="mailto:markfrancyzov@gmail.com">markfrancyzov@gmail.com</a>
+
+            <a name="bottom"></a>
       </body>
 
 </html> 
