--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
             <title>Марчик27</title>
       </head>
       <body>
-            <a href="#bottom">Вниз</a><br><br>
-      
-            <a href="https://justtwic.art/" 
-            title="Go justtwic.art" target="_blank">Go to justtwic.art</a>
-            <br><br><br><a href="about.html" target="_blank">СТРАНИЦА О НАС</a>
-            <a><b> | </b></a>
-            <a href="mailto:markfrancyzov@gmail.com">markfrancyzov@gmail.com</a>
-
-            <a name="bottom"></a>
+            <img width="2000px" height="500" title="Sea" alt="Sea"
+            src="https://images.pexels.com/photos/1001682/pexels-photo-1001682.jpeg?cs=srgb&dl=pexels-kellie-churchman-1001682.jpg&fm=jpg" >
+            <!-- <img src="sea.jpg" 
+            width="2000px" height="500" title="Sea" alt="Sea" > -->
       </body>
 
 </html> 
