--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
             <title>Марчик27</title>
       </head>
       <body>
-            <img width="2000px" height="500" title="Sea" alt="Sea"
-            src="https://images.pexels.com/photos/1001682/pexels-photo-1001682.jpeg?cs=srgb&dl=pexels-kellie-churchman-1001682.jpg&fm=jpg" >
-            <!-- <img src="sea.jpg" 
-            width="2000px" height="500" title="Sea" alt="Sea" > -->
+            <table border="1" width="300px">
+                  <thead>
+                        <tr>
+                              <th>Имя</th>
+                              <th>Возраст</th>
+                        </tr>
+
+                        <tfoot align="left">
+                              <tr>
+                                    <td>Last</td>
+                                    <td>One</td>
+                              </tr>
+                              <tbody align="center">
+                                    <tr>
+                                    <td>Mark</td>
+                                    <td>14</td>
+                                    </tr>
+                                    <tr>
+                                    <td>Markiz</td>
+                                    <td>25</td>
+                                    </tr>
+                                    <tr>
+                                    <td>Markiz</td>
+                                    <td>25</td>
+                                    </tr>
+                              </tbody>
+
+                        </tfoot>
+
+                  </thead>
+            </table>
       </body>
 
 </html> 
