--- a/index.html
+++ b/index.html
@@ -4,39 +4,11 @@
       <head>
             <meta charset="utf-8" />
             <title>Марчик27</title>
+            <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <table border="1" width="300px">
-                  <thead>
-                        <tr>
-                              <th>Имя</th>
-                              <th>Возраст</th>
-                        </tr>
-
-                        <tfoot align="left">
-                              <tr>
-                                    <td>Last</td>
-                                    <td>One</td>
-                              </tr>
-                              <tbody align="center">
-                                    <tr>
-                                    <td>Mark</td>
-                                    <td>14</td>
-                                    </tr>
-                                    <tr>
-                                    <td>Markiz</td>
-                                    <td>25</td>
-                                    </tr>
-                                    <tr>
-                                    <td>Markiz</td>
-                                    <td>25</td>
-                                    </tr>
-                              </tbody>
-
-                        </tfoot>
-
-                  </thead>
-            </table>
+            
+            <script src="js/main.js"></script>
       </body>
 
 </html> 
