--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="ua">
-
-      <head>
-            <meta charset="utf-8" />
-            <title>Марчик27</title>
-            <link rel="stylesheet" href="css/style.css">
-      </head>
-      <body>
-            
-            <script src="js/main.js"></script>
-      </body>
+<head>
+      <meta charset="utf-8" />
+      <title>Марчик27</title>
+</head>
+<body>
+      <span>Example <span>1</span></span>
+      <span>Example 2</span>
+</body>
 
 </html> 
