--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
             <title>Страница про нас</title>
       </head>
       <body>
-          <h1>О нас</h1>
+          <h1>СПАСИБО ЗА КРЕДИТ!!!!</h1>
       </body>
 
 </html> 
