--- a/index.html
+++ b/index.html
@@ -6,27 +6,9 @@
 </head>
 
 <body>
-      <from action="" method="POST">
-            <label for="username"><b>Введите ваше имя</b></label>
-            <input type="text" name="username" id="username" placeholder="Enter name" value="" 
-            maxlength="15"><br><br>
-            
-            <label><b>Введите свой пароль</b></label>
-            <input type="password"><br><br>
-            <label><b>Введите свой адрес электронной почты</b></label>
-            <input type="email"><br><br>
-            <label><b>Ваша старница тикток (вставьте ссылку)</b></label>
-            <input type="url"><br><br>
-            <label><b>Ваша дата рождения</b></label>
-            <input type="date"><br><br>
-            <input type="checkbox" checked><br><br>
-            <label>Ваше фото паспорта</label>
-            <input type="file"><br><br>
-            <label>ваш номер телефона</label>
-            <input type="phone"><br><br>
-      
-            <input type="button" value="Отправить">
-            <input type="reset" value="Очистить">
+      <from>
+           <textarea placeholder="Enter text" maxlength="50" required></textarea><br><br>
+           <button type="reset">Готово</button>
       </from>
 </body>
 
