--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
 </head>
 
 <body>
-      <from>
-           <textarea placeholder="Enter text" maxlength="50" required></textarea><br><br>
-           <button type="reset">Готово</button>
-      </from>
+      <form>
+            <select>
+                  <option disabled selected>-----</option>
+                  <option value="fortnite">Fortnite</option>
+                  <option value="cs2">CS2</option>
+                  <option value="minecraft">Minecraft</option>
+            </select>
+
+            <select multiple size="3">
+                  <option disabled selected>-----</option>
+                  <option value="fortnite">Fortnite</option>
+                  <option value="cs2">CS2</option>
+                  <option value="minecraft">Minecraft</option>
+            </select>
+      </form>
 </body>
 
 </html>
