--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
 </head>
 
 <body>
-      <form>
-            <select>
-                  <option disabled selected>-----</option>
-                  <option value="fortnite">Fortnite</option>
-                  <option value="cs2">CS2</option>
-                  <option value="minecraft">Minecraft</option>
-            </select>
+      <header>Шапка Сайта</header>
+      <nav>Меню</nav>
+      <main>Основная часть</main>
+      <aside>Боковая часть</aside>
+      <foorher>Футер сайта</foorher><br><br>
 
-            <select multiple size="3">
-                  <option disabled selected>-----</option>
-                  <option value="fortnite">Fortnite</option>
-                  <option value="cs2">CS2</option>
-                  <option value="minecraft">Minecraft</option>
-            </select>
-      </form>
+      <progress max="100" value="60">Заполнено на 60 пунктов</progress>
+      <details>
+            <summary>Посмотреть информацию</summary>
+            мне 5 годиков
+      </details>
 </body>
 
 </html>
