--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 <head>
-      <meta charset="utf-8" />
-      <title>Марчик27</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>HTML+CSS</title>
+      <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-      <header>Шапка Сайта</header>
-      <nav>Меню</nav>
-      <main>Основная часть</main>
-      <aside>Боковая часть</aside>
-      <foorher>Футер сайта</foorher><br><br>
-
-      <progress max="100" value="60">Заполнено на 60 пунктов</progress>
-      <details>
-            <summary>Посмотреть информацию</summary>
-            мне 5 годиков
-      </details>
+      <!-- style="color: blue" -->
+      <p>Lorem ipsum, <b>dolor</b> sit 
+            amet consectetur adipisicing elit. Magni, accusamus officia quae porro praesentium nostrum.</p>
 </body>
-
 </html>
