--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-      <!-- style="color: blue" -->
-      <p>Lorem ipsum, <b>dolor</b> sit 
-            amet consectetur adipisicing elit. Magni, accusamus officia quae porro praesentium nostrum.</p>
+      <div>
+            <main>
+                  <p class="text-color some" id="some-text">Lorem <b>text</b> 1</p>
+                  <p>Lorem <b>text</b> 2</p>
+            </main>
+      </div>
+
+      <p>Lorem <b class="text-color">text</b> 3</p>
+      <p>Lorem <b id="bold-text">text</b> 4</p>
 </body>
+
 </html>
