--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-      <div>
-            <main>
-                  <p class="text-color some" id="some-text">Lorem <b>text</b> 1</p>
-                  <p>Lorem <b>text</b> 2</p>
-            </main>
-      </div>
+      <a href="#" class="link">Home link</a>
+      <p class="link">Some new text</p>
 
-      <p>Lorem <b class="text-color">text</b> 3</p>
-      <p>Lorem <b id="bold-text">text</b> 4</p>
+      <p class="main-text">Some text</p>
+      <p class="main-text" tiltle="Some new text in tiltle"></p>
+
+      <div></div>
+      <div>Введите свое имя</div>
+
+      <input type="text" placeholder="Enter name">
+      <input type="text" placeholder="Enter name" disabled>
 </body>
 
 </html>
