--- a/index.html
+++ b/index.html
@@ -7,17 +7,8 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-      <a href="#" class="link">Home link</a>
-      <p class="link">Some new text</p>
-
-      <p class="main-text">Some text</p>
-      <p class="main-text" tiltle="Some new text in tiltle"></p>
-
-      <div></div>
-      <div>Введите свое имя</div>
-
-      <input type="text" placeholder="Enter name">
-      <input type="text" placeholder="Enter name" disabled>
+      <div id="block"></div>
+      <div id="block2"></div>
 </body>
 
 </html>
