--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-      <div id="block"></div>
-      <div id="block2"></div>
+      <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quasi ea qui quam molestiae illo iste architecto magnam tempora! Excepturi debitis voluptate mollitia sit facere quos eaque quasi est molestias?
+            Lorem ipsum dolor sit amet consectetur <b>adipisicing elit. Nam quasi ea qui quam molestiae</b> illo iste architecto magnam tempora! Excepturi debitis voluptate mollitia sit facere quos eaque quasi est molestias?
+      </p>
 </body>
 
 </html>
