--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-      <div id="block"></div>
-      <span calss="block"></span>
+      <div id="add-to-cart">+</div>
+      <header>Шапка</header>
+      <main>Основная часть</main>
+      <aside>Боковая часть</aside>
+      <footer>Футер</footer>
 </body>
 
 </html>
