--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
       <title>HTML+CSS</title>
       <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
       <div id="add-to-cart">+</div>
       <header>Шапка</header>
+
+      <ul class="nav">
+            <li>Главная</li>
+            <li>Про нас</li>
+            <li>Контакты</li>
+      </ul>
+
       <main>Основная часть</main>
       <aside>Боковая часть</aside>
       <footer>Футер</footer>
