HTML and CSS Basics for Beginners

--- a/index.html
+++ b/index.html
@@ -8,18 +8,11 @@
 </head>
 
 <body>
-      <div id="add-to-cart">+</div>
-      <header>Шапка</header>
-
-      <ul class="nav">
-            <li>Главная</li>
-            <li>Про нас</li>
-            <li>Контакты</li>
-      </ul>
-
-      <main>Основная часть</main>
-      <aside>Боковая часть</aside>
-      <footer>Футер</footer>
+      <div>
+            <li>Про нас</li><br>
+            <li>Связаться с нами</li><br>
+            <li>Помощь</li>
+      </div>
 </body>
 
 </html>
