--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="En">
+<html lang="ua">
 
       <head>
             <meta charset="utf-8" />
-            <title>Страница про нас</title>
+            <title>Связаться с нами</title>
       </head>
       <body>
-          <h1>СПАСИБО ЗА КРЕДИТ!!!!</h1>
+          <h1>бла бла бла</h1>
       </body>
 
 </html> 
