--- a/index.html
+++ b/index.html
@@ -8,36 +8,41 @@
 </head>
 
 <body>
-      <div class="box">
-            <div class="item" class="item-1">Lorem</div>
-            <div class="item" class="item-2">Lorem, ipsum</div>
-            <div class="item">Lorem, ipsum dolor.</div>
-            <div class="item">Lorem, ispum dolor sit amet.</div>
-            <div class="item">Lorem</div>
-            <div class="item">Lorem, ipsum</div>
-            <div class="item" class="item-7">Lorem, ipsum dolor.</div>
-            <div class="item">Lorem, ispum dolor sit amet.</div>
-            <div class="item">Lorem</div>
-            <div class="item">Lorem, ipsum</div>
-            <div class="item">Lorem, ipsum dolor.</div>
-            <div class="item">Lorem, ispum dolor sit amet.</div>
-            <div class="item">Lorem</div>
-            <div class="item">Lorem</div>
-            <div class="item">Lorem</div>
-            <div class="item">Lorem</div>
-            <div class="item">Lorem, ipsum</div>
-            <div class="item">Lorem, ipsum</div>
-            <div class="item">Lorem, ipsum</div>
-            <div class="item">Lorem, ipsum</div>
-            <div class="item">Lorem, ipsum dolor.</div>
+      <div class="wrapper">
+            <main class="page">
+                  <div class="text">
+                        <p>
+                              <span>Колонка #1 </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.
+                        </p>
+                        <p>
+                              <span>Колонка #2 </span>doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.
+                              
+                        </p>
+                        <h2>Заголовок</h2>
+                        <p>
+                              <span>Колонка #3 </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.
+                        </p>
+                        <p>
+                              <span>Колонка #4 </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
+                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
+                              quaerat neque quod.
+                        </p>
+                  </div>
+            </main>
       </div>
-
-      <!-- <div class="wrapper">
-            <header class="header element">header</header>
-            <main class="main element">main</main>
-            <aside class="asaid element">aside</aside>
-            <footer class="footer element">footer</footer>
-      </div> -->
 </body>
 
 </html>
