--- a/index.html
+++ b/index.html
@@ -8,41 +8,20 @@
 </head>
 
 <body>
-      <div class="wrapper">
-            <main class="page">
-                  <div class="text">
-                        <p>
-                              <span>Колонка #1 </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.
-                        </p>
-                        <p>
-                              <span>Колонка #2 </span>doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.
-                              
-                        </p>
-                        <h2>Заголовок</h2>
-                        <p>
-                              <span>Колонка #3 </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.
-                        </p>
-                        <p>
-                              <span>Колонка #4 </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod. Aliquid, enim assumenda.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, reiciendis facilis. Unde temporibus ab 
-                              quia cupiditate doloribus voluptatem quod pariatur accusantium, assumenda eveniet. Molestiae 
-                              quaerat neque quod.
-                        </p>
-                  </div>
-            </main>
-      </div>
+<div>
+      <ul class="nav-list">
+            <li>
+                  <a href="" class="nav-list-link">Про нас</a>
+            </li>
+            <li>
+                  <a href="" class="nav-list-link">Поддержать нас</a>
+            </li>
+            <li>
+                  <a href="" class="nav-list-link">Связь</a>
+            </li>
+
+      </ul>
+</div>
 </body>
 
 </html>
