--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 <div>
+      <div class="header">
       <ul class="nav-list">
             <li>
                   <a href="" class="nav-list-link">Про нас</a>
@@ -21,6 +22,7 @@
             </li>
 
       </ul>
+      </div>
 </div>
 </body>
 
