--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 
 <body>
       <div class="wrapper">
-            <div class="one">1</div>
-            <div class="two">2</div>
-            <div class="three">3</div>
-            <div class="four">4</div>
-            <div class="five">5</div>
-            <div class="six">6</div>
-            <div class="seven">7</div>
-            <div class="eight">8</div>
-            <div class="nine">9</div>
-            <div class="ten">10</div>
-            <div class="eleven">11</div>
-            <div class="twelve">12</div>
+      <div class="num">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+            <div class="four"></div>
+            <div class="five"></div>
+            <div class="six"></div>
+            <div class="seven"></div>
+      </div>
       </div>
 </body>
 
