--- a/index.html
+++ b/index.html
@@ -8,16 +8,50 @@
 </head>
 
 <body>
-      <div class="wrapper">
-      <div class="num">
-            <div class="one"></div>
-            <div class="two"></div>
-            <div class="three"></div>
-            <div class="four"></div>
-            <div class="five"></div>
-            <div class="six"></div>
-            <div class="seven"></div>
-      </div>
+      <div class="main">
+            <div class="header">
+                  <div class="invis"></div>
+                  <div class="block">
+                  <div class="block_1"></div>
+                  <div class="block_2"></div>
+                  <div class="block_3"></div>
+                  <div class="block_4"></div>
+                  </div>
+            </div>
+            <div class="block_5">
+            <div class="one"> <div class="text_1">Корисний календар айтівця. Окрім 
+                  фахових лекцій і семінарів, у лютому 
+                  надихатимуть LatexFauna, джаз, регтайм 
+                  та свінг у стилі ретро</div>
+            </div>
+            <div class="block_info">
+                  <div class="text_inf">
+                  <h1>13 лютого. Webinar «Visual Software Testing Tools with AI in 2024»
+                  </h1>
+                  <h2>Лектора Дарія Красуля розповість про: </h2>
+                  <ul>
+                        <li>AI in Visual Testing: A quick overview of AI’s impact on visual testing.</li>
+                        <li>Analyzing Applitools: Exploring its limitations.</li>
+                        <li>Tool Comparison: We’ll examine tools like Applitools, Katalon, Pcloudy, Lambdatest, and Percy, looking at their features, integration capabilities, and overall effectiveness.</li>
+                        <li>Real-world Applications: Dive into case studies showcasing practical uses in UI and functional testing.</li>
+                        <li>Interactive Q&A Session: A chance for you to ask questions and engage in discussions about AI-driven testing tools.</li>
+                  </ul>
+                  </div>
+            </div>
+            <footer class="footer">
+                  <div class="main_2">
+                  <div class="contact">Контакти</div>
+                  <div class="plus">Публічний договір</div>
+                  <div class="vakans">Вакансії у нас</div>
+                  <div class="ygoda">Угода користувча</div>
+                  <div class="rekla">Рекламні можливості</div>
+                  <div class="sponsmat">Спонсорський матеріал</div>
+                  <div class="block_znak">
+                        <div class="znak">?</div>
+                  </div>
+                  </div>
+            </div>
+            </footer>
       </div>
 </body>
 
