--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
 <body>
 <div class="main">
             <div class="header">
-                  <div class="moduli">Модулі</div>
-                  <div class="information">Інформація</div>
-                  <div class="vidguk">Відгуки</div>
-                  <div class="recenzi">Рецензії</div>
+                  <button class="header_button">Модулі</button>
+                  <button class="header_button">Інформація</button>
+                  <button class="header_button">Відгуки</button>
+                  <button class="header_button">Рецензії</button>
             </div>
-            <div class="line_1"></div>
-
-      <div class="main_2">
-            <div class="block_1">1</div>
-            <div class="block_2">2</div>
-            <div class="block_3">3</div>
-      </div>
-
-      <div class="main_3">
-            <footer>
-                  <div class="block_4">14</div>
-            </footer>
-      </div>
-</div>
+            
+            <div class="main_2">
+                  <div class="card card-1">
+                        <h1 class="">Відкрийте нові можливості з Coursera Plus</h1>
+                        <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
+                        <a class="" href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
+                  </div>
+                  <div class="card card-2">2</div>
+                  <div class="card card-3">3</div>
+            </div>
+            
+            <div class="main_3">
+                  <footer>
+                        <div class="block_4">Спільнота</div>
+                  </footer>
+            </div>
+            </div>
 </body>
 
 </html>
