--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
             
             <div class="main_2">
                   <div class="card card-1">
+                        <h1>Відкрийте нові можливості з Coursera Plus</h1>
+                        <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
+                        <a href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
+                  </div>
+                  <div class="card card-2">
                         <h1 class="">Відкрийте нові можливості з Coursera Plus</h1>
                         <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
-                        <a class="" href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
+                        <a href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
                   </div>
-                  <div class="card card-2">2</div>
-                  <div class="card card-3">3</div>
+                  <div class="card card-3">
+                        <h1>Відкрийте нові можливості з Coursera Plus</h1>
+                        <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
+                        <a href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
+                  </div>
             </div>
             
             <div class="main_3">
