--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>HTML+CSS</title>
       <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-<div class="main">
-            <div class="header">
-                  <button class="header_button">Модулі</button>
-                  <button class="header_button">Інформація</button>
-                  <button class="header_button">Відгуки</button>
-                  <button class="header_button">Рецензії</button>
-            </div>
-            
-            <div class="main_2">
-                  <div class="card card-1">
-                        <h1>Відкрийте нові можливості з Coursera Plus</h1>
-                        <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
-                        <a href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
-                  </div>
-                  <div class="card card-2">
-                        <h1 class="">Відкрийте нові можливості з Coursera Plus</h1>
-                        <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
-                        <a href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
-                  </div>
-                  <div class="card card-3">
-                        <h1>Відкрийте нові можливості з Coursera Plus</h1>
-                        <p>Необмежений доступ до понад 7000 курсів світового рівня, практичних проєктів і сертифікаційних програм, які готують до роботи, – усе це включено до вашої підписки</p>
-                        <a href="https://www.coursera.org/courseraplus">Дізнатися більше</a>
-                  </div>
-            </div>
-            
-            <div class="main_3">
-                  <footer>
-                        <div class="block_4">Спільнота</div>
-                  </footer>
-            </div>
-            </div>
+      <div class="card-bloks">
+            <article class="card card-1">
+                  <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
+            </article>
+
+            <article class="card">
+                  <p class="text-2">Learn CSS Variables</p>
+            </article>
+
+            <article class="card card-2">
+                  <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
+            </article>
+      </div>
+
+      <div class="card-bloks-1">
+            <article class="card card-3">
+                  <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
+            </article>
+
+            <article class="card">
+                  <p class="text-4">Learn CSS Variables</p>
+            </article>
+
+            <article class="card card-4">
+                  <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
+            </article>
+      </div>
 </body>
 
 </html>
