--- a/index.html
+++ b/index.html
@@ -6,32 +6,43 @@
 </head>
 
 <body>
-      <div class="card-bloks">
-            <article class="card card-1">
-                  <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
-            </article>
+      <div class="main">
+            <div class="card-bloks">
+                  <article class="card card-1">
+                        <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
+                  </article>
 
-            <article class="card">
-                  <p class="text-2">Learn CSS Variables</p>
-            </article>
+                  <article class="card">
+                        <p class="text-2">Learn CSS Variables</p>
+                  </article>
 
-            <article class="card card-2">
-                  <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
-            </article>
-      </div>
+                  <article class="card card-2">
+                        <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
+                  </article>
+            </div>
 
-      <div class="card-bloks-1">
-            <article class="card card-3">
-                  <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
-            </article>
+            <div class="card-bloks-1">
+                  <article class="card card-3">
+                        <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
+                  </article>
 
-            <article class="card">
-                  <p class="text-4">Learn CSS Variables</p>
-            </article>
+                  <article class="card-4">
+                        <p class="text-4">Learn CSS Variables</p>
+                  </article>
 
-            <article class="card card-4">
-                  <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
-            </article>
+                  <article class="card card-5">
+                        <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
+                  </article>
+
+
+            </div>
+
+            <div class="block">
+                  <article class="block-1">
+                        <p class="block-text">Learn CSS Variables</p>
+                  </article>
+            </div>
+
       </div>
 </body>
 
