--- a/index.html
+++ b/index.html
@@ -6,44 +6,146 @@
 </head>
 
 <body>
-      <div class="main">
-            <div class="card-bloks">
-                  <article class="card card-1">
-                        <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
-                  </article>
-
-                  <article class="card">
-                        <p class="text-2">Learn CSS Variables</p>
-                  </article>
-
-                  <article class="card card-2">
-                        <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
-                  </article>
-            </div>
-
-            <div class="card-bloks-1">
-                  <article class="card card-3">
-                        <p>Build a Portfolio Website with HTML, CSS, and JavaScript</p>
-                  </article>
-
-                  <article class="card-4">
-                        <p class="text-4">Learn CSS Variables</p>
-                  </article>
-
-                  <article class="card card-5">
-                        <p>Вступ до веб-розробки за допомогою HTML, CSS, JavaScript</p>
-                  </article>
-
-
-            </div>
-
-            <div class="block">
-                  <article class="block-1">
-                        <p class="block-text">Learn CSS Variables</p>
-                  </article>
-            </div>
-
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">first-child</div>
+                  <div class="item-content">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
       </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">last-child</div>
+                  <div class="item-content --2">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-child( 2 )</div>
+                  <div class="item-content --3">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-last-child( 2 )</div>
+                  <div class="item-content --4">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-child( odd )</div>
+                  <div class="item-content --5">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-child( even )</div>
+                  <div class="item-content --6">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-child( n+4 )</div>
+                  <div class="item-content --7">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-child( 3n-1 )</div>
+                  <div class="item-content --8">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid">
+            <article class="item">
+                  <div class="item-capt">nth-child( 3n+1 )</div>
+                  <div class="item-content --9">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
+      <div class="grid-1">
+            <article class="item">
+                  <div class="item-capt">nth-child( 4n )</div>
+                  <div class="item-content --10">
+                        <div class="item-element">1</div>
+                        <div class="item-element">2</div>
+                        <div class="item-element">3</div>
+                        <div class="item-element">4</div>
+                        <div class="item-element">5</div>
+                        <div class="item-element">6</div>
+                  </div>
+            </article>
+      </div>
+
 </body>
 
 </html>
